# Autonomous_drive

./: README.md
yashasproject/: pyproject.toml  requirements-jetson.txt  requirements.txt  setup.py
yashasproject/jetson/: __init__.py  __main__.py  cli.py  config.py  data_collection.py  dataset.py  inference.py  model.py  preprocessing.py  trainer.py
yashasproject/notebooks/: data_collection.ipynb  training.ipynb
